[project]
name = "sb-hub2-log"
version = "0.1.0"
description = "SwitchBot Hub 2 logger"
authors = [
    { name = "false", email = "false@wizard-limit.net" }
]
dependencies = [
    "python-switchbot>=2.3.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "ipython>=8.22.1",
]

[tool.hatch.metadata]
allow-direct-references = true

